# math

./: CMakeLists.txt  README.md
src/: MatrixLibrary.cpp  matrix-test.cpp
src/include/: MatrixLibrary.h
src/include/definitions/: MatrixDefinitions.h
src/include/utils/: MatrixUtils.h
src/utils/: MatrixUtils.cpp
